--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -1,6 +1,6 @@
 {
     "savedColorPalette": "contrast",
-    "savedDate": "2024,01,22",
+    "savedDate": "2024,01,21",
     "gameOfTheWeek": "Civilization V",
     "weeklyListSelection": [
         "Card Draw",
@@ -57,13 +57,13 @@
         "Dead Cells",
         "Ultrakill",
         "Rain World",
-        "Subnautica",
+        "Brutal Orchestra",
         "Pokemon Legends Arceus",
         "The Planet Crafter",
         "The Binding of Issac",
         "Against The Storm"
     ],
-    "numberOfPoints": 694,
+    "numberOfPoints": 696,
     "lastGameId": 150,
     "fullGameList": [
         {
