--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -1,57 +1,57 @@
 {
     "savedColorPalette": "contrast",
-    "savedDate": "2024,01,28",
-    "gameOfTheWeek": "Metroid Prime Remastered",
+    "savedDate": "2024,02,04",
+    "gameOfTheWeek": "Touhou 16 - Hidden Star in Four Seasons",
     "weeklyListSelection": [
         "Card Draw",
-        "Want To Continue Playing",
         "Roll",
-        "Roll",
-        "Want To Continue Playing",
+        "Want to Continue Playing",
         "Card Draw",
+        "Card Draw",
+        "Want to Continue Playing",
         "Free Day"
     ],
     "rollGameList": [
-        "Grim Dawn",
-        "The End is Nigh",
-        "The Legend of Zelda: Breath of the Wild",
-        "Apico",
-        "Opus Magnum",
-        "Lego Star Wars (Complete Saga)",
-        "Opus Magnum",
-        "Half Life: Opposing Force",
-        "Lego Star Wars (Complete Saga)",
-        "Evil Genius 2",
-        "Crypt of the Necrodancer",
-        "Touhou 11 - Subterranean Animism",
+        "Darkest Dungeon",
+        "Mewnbase",
+        "Monster Hunter Generations Ultimate",
+        "Ultrakill",
+        "The Tenants",
+        "The Planet Crafter",
+        "Civilization V",
+        "Induction",
         "Satisfactory",
-        "Risk of Rain 2",
-        "Koi Farm",
-        "Stacklands",
-        "Iron Oath",
+        "Frozenheim",
+        "The Binding of Issac",
+        "Half Life 2",
+        "Duskers",
+        "Yankai's Peak",
+        "Ultrakill",
+        "Potion Craft",
+        "A Dance of Fire and Ice",
         "The Riftbreaker",
-        "Tangledeep",
+        "Hexcells Infinite",
         "Free Space (Pick Any Game)"
     ],
     "cardDrawList": [
-        "Lobotomy Corporation",
-        "Stardew Valley",
-        "Flowscape",
+        "Potion Craft",
         "Megaquarium",
-        "Prehistoric Kingdom",
-        "Half Life 2",
-        "Besiege",
-        "Firewatch",
+        "Inscryption",
+        "Don't Starve Together",
+        "Dark Souls",
         "Valheim",
-        "Moon Hunters",
-        "Black Book",
-        "Astroneer",
-        "Ultrakill",
+        "Half Life: Blue Shift",
+        "Half Life: Opposing Force",
+        "Hollow Knight",
+        "Frostpunk",
+        "Wildermyth",
+        "Half Life",
+        "The Textorcist: The Story of Ray Bibbia",
         "Free Space (Pick Any Game)"
     ],
     "personalGameList": [
         "Deep Rock Galactic",
-        "A Dance of Fire and Ice",
+        "Pokemon Mystery Dungeon: Explorers of Sky",
         "Monster Train",
         "Valheim",
         "Dead Cells",
