--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -1,52 +1,52 @@
 {
     "savedColorPalette": "contrast",
-    "savedDate": "2024,02,04",
-    "gameOfTheWeek": "Touhou 16 - Hidden Star in Four Seasons",
+    "savedDate": "2024,02,12",
+    "gameOfTheWeek": "Core Keeper",
     "weeklyListSelection": [
         "Card Draw",
+        "Want To Continue Playing",
         "Roll",
-        "Want to Continue Playing",
         "Card Draw",
-        "Card Draw",
-        "Want to Continue Playing",
-        "Free Day"
+        "Free Day",
+        "Want To Continue Playing",
+        "Roll"
     ],
     "rollGameList": [
-        "Darkest Dungeon",
+        "Besiege",
+        "Dissembler",
+        "Splatoon 3",
         "Mewnbase",
-        "Monster Hunter Generations Ultimate",
-        "Ultrakill",
-        "The Tenants",
-        "The Planet Crafter",
-        "Civilization V",
-        "Induction",
-        "Satisfactory",
-        "Frozenheim",
-        "The Binding of Issac",
-        "Half Life 2",
-        "Duskers",
+        "Valheim",
+        "Carrion",
+        "Darkest Dungeon",
+        "Besiege",
+        "Library of Ruina",
+        "Snake's Tale",
         "Yankai's Peak",
+        "Frostpunk",
+        "Pokemon Reborn",
+        "Sunless Sea",
         "Ultrakill",
-        "Potion Craft",
-        "A Dance of Fire and Ice",
-        "The Riftbreaker",
-        "Hexcells Infinite",
+        "Ecosystem",
+        "Dissembler",
+        "Snake's Tale",
+        "Arcaea",
         "Free Space (Pick Any Game)"
     ],
     "cardDrawList": [
-        "Potion Craft",
-        "Megaquarium",
+        "Touhou 11 - Subterranean Animism",
+        "Dome Keeper",
         "Inscryption",
-        "Don't Starve Together",
-        "Dark Souls",
-        "Valheim",
+        "Dave The Diver",
+        "Risk of Rain 2",
+        "Touhou 14.3 - Impossible Spell Card",
+        "Stacklands",
         "Half Life: Blue Shift",
-        "Half Life: Opposing Force",
-        "Hollow Knight",
-        "Frostpunk",
-        "Wildermyth",
-        "Half Life",
-        "The Textorcist: The Story of Ray Bibbia",
+        "Islanders",
+        "Darkest Dungeon",
+        "Monster Hunter Generations Ultimate",
+        "The End is Nigh",
+        "Cultist Simulator",
         "Free Space (Pick Any Game)"
     ],
     "personalGameList": [
@@ -63,7 +63,7 @@
         "The Binding of Issac",
         "Against The Storm"
     ],
-    "numberOfPoints": 544,
+    "numberOfPoints": 549,
     "lastGameId": 151,
     "fullGameList": [
         {
