--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -1,7 +1,7 @@
 {
     "savedColorPalette": "contrast",
-    "savedDate": "2024,02,12",
-    "gameOfTheWeek": "Core Keeper",
+    "savedDate": "2024,02,26",
+    "gameOfTheWeek": "Dave The Diver",
     "weeklyListSelection": [
         "Card Draw",
         "Want To Continue Playing",
@@ -12,41 +12,41 @@
         "Roll"
     ],
     "rollGameList": [
-        "Besiege",
-        "Dissembler",
-        "Splatoon 3",
+        "Portal 2",
         "Mewnbase",
-        "Valheim",
-        "Carrion",
-        "Darkest Dungeon",
-        "Besiege",
+        "Airborne Kingdom",
+        "The Planet Crafter",
+        "Ethereal",
+        "Lego Star Wars (Complete Saga)",
+        "Mana Spark",
+        "Kenshi",
+        "English Country Tune",
+        "Evil Genius 2",
+        "Deep Rock Galactic",
         "Library of Ruina",
-        "Snake's Tale",
-        "Yankai's Peak",
-        "Frostpunk",
-        "Pokemon Reborn",
-        "Sunless Sea",
-        "Ultrakill",
-        "Ecosystem",
+        "Valheim",
         "Dissembler",
-        "Snake's Tale",
-        "Arcaea",
+        "Lego Bricktales",
+        "Against The Storm",
+        "Frostpunk",
+        "Lobotomy Corporation",
+        "Risk of Rain 2",
         "Free Space (Pick Any Game)"
     ],
     "cardDrawList": [
-        "Touhou 11 - Subterranean Animism",
-        "Dome Keeper",
+        "Mewnbase",
+        "Shovel Knight Treasure Trove",
+        "Astroneer",
+        "Mindustry",
+        "Portal 1",
+        "Flowscape",
+        "Snake's Tale",
+        "Arcaea",
+        "Grim Dawn",
+        "Deep Rock Galactic",
         "Inscryption",
-        "Dave The Diver",
-        "Risk of Rain 2",
-        "Touhou 14.3 - Impossible Spell Card",
-        "Stacklands",
-        "Half Life: Blue Shift",
-        "Islanders",
-        "Darkest Dungeon",
-        "Monster Hunter Generations Ultimate",
-        "The End is Nigh",
-        "Cultist Simulator",
+        "Hidden Folks",
+        "Frozenheim",
         "Free Space (Pick Any Game)"
     ],
     "personalGameList": [
@@ -60,10 +60,10 @@
         "Brutal Orchestra",
         "Pokemon Legends Arceus",
         "The Planet Crafter",
-        "The Binding of Issac",
+        "The End is Nigh",
         "Against The Storm"
     ],
-    "numberOfPoints": 549,
+    "numberOfPoints": 558,
     "lastGameId": 151,
     "fullGameList": [
         {
@@ -435,7 +435,7 @@
         {
             "name": "Lost Ember",
             "id": 62,
-            "completed": "Incomplete",
+            "completed": "Complete",
             "replayabilityFactor": "Low"
         },
         {
