read change log

--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -1,7 +1,7 @@
 {
-    "savedColorPalette": "contrast",
-    "savedDate": "2024,02,26",
-    "gameOfTheWeek": "Dave The Diver",
+    "savedColorPalette": "sunset",
+    "savedDate": "2024,03,04",
+    "gameOfTheWeek": "Black Book",
     "weeklyListSelection": [
         "Card Draw",
         "Want To Continue Playing",
@@ -12,41 +12,41 @@
         "Roll"
     ],
     "rollGameList": [
-        "Portal 2",
-        "Mewnbase",
-        "Airborne Kingdom",
-        "The Planet Crafter",
-        "Ethereal",
-        "Lego Star Wars (Complete Saga)",
-        "Mana Spark",
-        "Kenshi",
-        "English Country Tune",
-        "Evil Genius 2",
+        "One Step From Eden",
+        "Don't Starve Together",
         "Deep Rock Galactic",
-        "Library of Ruina",
-        "Valheim",
-        "Dissembler",
-        "Lego Bricktales",
-        "Against The Storm",
-        "Frostpunk",
-        "Lobotomy Corporation",
-        "Risk of Rain 2",
+        "Shapez.io",
+        "Chants of Sennaar",
+        "Hidden Folks",
+        "Ecosystem",
+        "Achromatic",
+        "One Step From Eden",
+        "Wildermyth",
+        "Monster Train",
+        "Astroneer",
+        "Metroid Prime Remastered",
+        "Dave The Diver",
+        "Astroneer",
+        "Evil Genius 2",
+        "Touhou 13 - Ten Desires",
+        "Hades",
+        "Opus Magnum",
         "Free Space (Pick Any Game)"
     ],
     "cardDrawList": [
-        "Mewnbase",
-        "Shovel Knight Treasure Trove",
-        "Astroneer",
-        "Mindustry",
         "Portal 1",
-        "Flowscape",
-        "Snake's Tale",
+        "Civilization V",
+        "Sunless Sea",
         "Arcaea",
+        "Black Book",
+        "Yankai's Peak",
+        "Subnautica: Below Zero",
+        "Kasi",
+        "Duskers",
         "Grim Dawn",
-        "Deep Rock Galactic",
-        "Inscryption",
-        "Hidden Folks",
-        "Frozenheim",
+        "Megaquarium",
+        "Monster Hunter Generations Ultimate",
+        "Iconoclasts",
         "Free Space (Pick Any Game)"
     ],
     "personalGameList": [
@@ -63,7 +63,7 @@
         "The End is Nigh",
         "Against The Storm"
     ],
-    "numberOfPoints": 565,
+    "numberOfPoints": 576,
     "lastGameId": 151,
     "fullGameList": [
         {
