--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -1,7 +1,7 @@
 {
-    "savedColorPalette": "sunset",
-    "savedDate": "2024,03,04",
-    "gameOfTheWeek": "Black Book",
+    "savedColorPalette": "contrast",
+    "savedDate": "2024,03,11",
+    "gameOfTheWeek": "The Textorcist: The Story of Ray Bibbia",
     "weeklyListSelection": [
         "Card Draw",
         "Want To Continue Playing",
@@ -12,41 +12,41 @@
         "Roll"
     ],
     "rollGameList": [
-        "One Step From Eden",
-        "Don't Starve Together",
-        "Deep Rock Galactic",
-        "Shapez.io",
-        "Chants of Sennaar",
-        "Hidden Folks",
-        "Ecosystem",
-        "Achromatic",
-        "One Step From Eden",
-        "Wildermyth",
-        "Monster Train",
-        "Astroneer",
-        "Metroid Prime Remastered",
-        "Dave The Diver",
-        "Astroneer",
+        "Pokemon Violet",
+        "Cosmic Express",
+        "Rain World",
+        "Niche",
+        "Inscryption",
         "Evil Genius 2",
-        "Touhou 13 - Ten Desires",
-        "Hades",
+        "Cultist Simulator",
+        "Core Keeper",
+        "The Riftbreaker",
+        "Risk of Rain 2",
+        "Astroneer",
         "Opus Magnum",
+        "Prehistoric Kingdom",
+        "Mindustry",
+        "Patch Quest",
+        "The Univerism",
+        "Vault of the Void",
+        "Touhou 14.3 - Impossible Spell Card",
+        "Divinity: Original Sin 2",
         "Free Space (Pick Any Game)"
     ],
     "cardDrawList": [
-        "Portal 1",
-        "Civilization V",
-        "Sunless Sea",
-        "Arcaea",
-        "Black Book",
-        "Yankai's Peak",
-        "Subnautica: Below Zero",
-        "Kasi",
-        "Duskers",
-        "Grim Dawn",
+        "Metroid Prime Remastered",
+        "Shapez.io",
+        "Sokobond",
+        "Pokemon Reborn",
         "Megaquarium",
-        "Monster Hunter Generations Ultimate",
-        "Iconoclasts",
+        "Against The Storm",
+        "Sunless Sea",
+        "Vault of the Void",
+        "Hidden Folks",
+        "Besiege",
+        "Divinity: Original Sin 2",
+        "Black Book",
+        "The Binding of Issac",
         "Free Space (Pick Any Game)"
     ],
     "personalGameList": [
@@ -57,13 +57,13 @@
         "Dead Cells",
         "Ultrakill",
         "Rain World",
-        "Brutal Orchestra",
+        "Black Book",
         "Pokemon Legends Arceus",
         "The Planet Crafter",
         "The End is Nigh",
         "Against The Storm"
     ],
-    "numberOfPoints": 576,
+    "numberOfPoints": 581,
     "lastGameId": 151,
     "fullGameList": [
         {
@@ -915,8 +915,8 @@
         {
             "name": "Dave The Diver",
             "id": 142,
-            "completed": "Incomplete",
-            "replayabilityFactor": "High"
+            "completed": "Complete",
+            "replayabilityFactor": "Moderate"
         },
         {
             "name": "Shovel Knight Treasure Trove",
