--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -1,7 +1,7 @@
 {
     "savedColorPalette": "contrast",
-    "savedDate": "2024,03,11",
-    "gameOfTheWeek": "The Textorcist: The Story of Ray Bibbia",
+    "savedDate": "2024,03,19",
+    "gameOfTheWeek": "Darkest Dungeon",
     "weeklyListSelection": [
         "Card Draw",
         "Want To Continue Playing",
@@ -12,41 +12,41 @@
         "Roll"
     ],
     "rollGameList": [
-        "Pokemon Violet",
-        "Cosmic Express",
-        "Rain World",
-        "Niche",
-        "Inscryption",
-        "Evil Genius 2",
-        "Cultist Simulator",
-        "Core Keeper",
-        "The Riftbreaker",
-        "Risk of Rain 2",
-        "Astroneer",
-        "Opus Magnum",
-        "Prehistoric Kingdom",
-        "Mindustry",
-        "Patch Quest",
-        "The Univerism",
-        "Vault of the Void",
+        "Noita",
+        "Snake's Tale",
         "Touhou 14.3 - Impossible Spell Card",
-        "Divinity: Original Sin 2",
+        "English Country Tune",
+        "Hexcells Infinite",
+        "Arcaea",
+        "Induction",
+        "Splatoon 3",
+        "Lobotomy Corporation",
+        "Frozenheim",
+        "Wildermyth",
+        "Stacklands",
+        "Darkest Dungeon",
+        "Dorfromantik",
+        "Stacklands",
+        "The Legend of Zelda: Breath of the Wild",
+        "Duskers",
+        "Touhou 11 - Subterranean Animism",
+        "Half Life 2",
         "Free Space (Pick Any Game)"
     ],
     "cardDrawList": [
-        "Metroid Prime Remastered",
+        "Crypt of the Necrodancer",
+        "Frostpunk",
+        "Koi Farm",
+        "Dark Souls",
+        "Dorfromantik",
+        "Noita",
+        "Subnautica: Below Zero",
+        "Mana Spark",
+        "English Country Tune",
         "Shapez.io",
-        "Sokobond",
-        "Pokemon Reborn",
-        "Megaquarium",
-        "Against The Storm",
-        "Sunless Sea",
-        "Vault of the Void",
-        "Hidden Folks",
-        "Besiege",
-        "Divinity: Original Sin 2",
-        "Black Book",
-        "The Binding of Issac",
+        "A Dance of Fire and Ice",
+        "Half Life: Opposing Force",
+        "Animal Crossing: New Horizons",
         "Free Space (Pick Any Game)"
     ],
     "personalGameList": [
@@ -63,7 +63,7 @@
         "The End is Nigh",
         "Against The Storm"
     ],
-    "numberOfPoints": 582,
+    "numberOfPoints": 588,
     "lastGameId": 151,
     "fullGameList": [
         {
