--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -1,7 +1,7 @@
 {
     "savedColorPalette": "contrast",
-    "savedDate": "2024,03,19",
-    "gameOfTheWeek": "Darkest Dungeon",
+    "savedDate": "2024,03,26",
+    "gameOfTheWeek": "Kenshi",
     "weeklyListSelection": [
         "Card Draw",
         "Want To Continue Playing",
@@ -12,41 +12,41 @@
         "Roll"
     ],
     "rollGameList": [
-        "Noita",
-        "Snake's Tale",
-        "Touhou 14.3 - Impossible Spell Card",
-        "English Country Tune",
-        "Hexcells Infinite",
-        "Arcaea",
+        "Carrion",
+        "Satisfactory",
+        "Satisfactory",
+        "Library of Ruina",
+        "Prehistoric Kingdom",
+        "Subnautica: Below Zero",
         "Induction",
-        "Splatoon 3",
-        "Lobotomy Corporation",
-        "Frozenheim",
-        "Wildermyth",
-        "Stacklands",
-        "Darkest Dungeon",
-        "Dorfromantik",
-        "Stacklands",
-        "The Legend of Zelda: Breath of the Wild",
-        "Duskers",
-        "Touhou 11 - Subterranean Animism",
-        "Half Life 2",
+        "Minecraft",
+        "Frostpunk",
+        "Subnautica: Below Zero",
+        "Moon Hunters",
+        "English Country Tune",
+        "The Textorcist: The Story of Ray Bibbia",
+        "Megaquarium",
+        "No Man's Sky",
+        "Dome Keeper",
+        "Inscryption",
+        "Dome Keeper",
+        "Crypt of the Necrodancer",
         "Free Space (Pick Any Game)"
     ],
     "cardDrawList": [
-        "Crypt of the Necrodancer",
-        "Frostpunk",
-        "Koi Farm",
-        "Dark Souls",
-        "Dorfromantik",
-        "Noita",
-        "Subnautica: Below Zero",
+        "Firewatch",
+        "Darkest Dungeon",
+        "Metroid Prime Remastered",
+        "Lego Indiana Jones",
+        "Half Life 2",
+        "Cultist Simulator",
+        "Lego Star Wars (Complete Saga)",
+        "Portal 2",
+        "The Univerism",
+        "Evil Genius 2",
+        "Pokemon Legends Arceus",
+        "Necesse",
         "Mana Spark",
-        "English Country Tune",
-        "Shapez.io",
-        "A Dance of Fire and Ice",
-        "Half Life: Opposing Force",
-        "Animal Crossing: New Horizons",
         "Free Space (Pick Any Game)"
     ],
     "personalGameList": [
