--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -1,7 +1,7 @@
 {
     "savedColorPalette": "contrast",
-    "savedDate": "2024,03,26",
-    "gameOfTheWeek": "Kenshi",
+    "savedDate": "2024,04,02",
+    "gameOfTheWeek": "The Messenger",
     "weeklyListSelection": [
         "Card Draw",
         "Want To Continue Playing",
@@ -12,41 +12,41 @@
         "Roll"
     ],
     "rollGameList": [
-        "Carrion",
-        "Satisfactory",
-        "Satisfactory",
-        "Library of Ruina",
-        "Prehistoric Kingdom",
-        "Subnautica: Below Zero",
-        "Induction",
-        "Minecraft",
-        "Frostpunk",
-        "Subnautica: Below Zero",
+        "Wildermyth",
+        "Rain World",
+        "Deep Rock Galactic",
+        "Airborne Kingdom",
+        "Neon White",
+        "The Legend of Zelda: Breath of the Wild",
+        "Oxygen Not Included",
         "Moon Hunters",
-        "English Country Tune",
-        "The Textorcist: The Story of Ray Bibbia",
-        "Megaquarium",
-        "No Man's Sky",
+        "A Dance of Fire and Ice",
+        "Half Life",
+        "Frozenheim",
+        "Prehistoric Kingdom",
+        "Snake's Tale",
+        "Valheim",
         "Dome Keeper",
-        "Inscryption",
-        "Dome Keeper",
-        "Crypt of the Necrodancer",
+        "Pokemon Reborn",
+        "Induction",
+        "Satisfactory",
+        "Core Keeper",
         "Free Space (Pick Any Game)"
     ],
     "cardDrawList": [
-        "Firewatch",
-        "Darkest Dungeon",
-        "Metroid Prime Remastered",
-        "Lego Indiana Jones",
-        "Half Life 2",
-        "Cultist Simulator",
-        "Lego Star Wars (Complete Saga)",
-        "Portal 2",
-        "The Univerism",
-        "Evil Genius 2",
-        "Pokemon Legends Arceus",
-        "Necesse",
-        "Mana Spark",
+        "Yankai's Peak",
+        "Rain World",
+        "Potion Craft",
+        "The Riftbreaker",
+        "Dissembler",
+        "Opus Magnum",
+        "Pokemon Heartgold",
+        "Chants of Sennaar",
+        "Deep Rock Galactic",
+        "Lego Star Wars (Skywalker Saga)",
+        "Pokemon White 2",
+        "Half Life: Opposing Force",
+        "Pokemon Mystery Dungeon: Explorers of Sky",
         "Free Space (Pick Any Game)"
     ],
     "personalGameList": [
