--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -1,7 +1,7 @@
 {
-    "savedColorPalette": "contrast",
-    "savedDate": "2024,04,02",
-    "gameOfTheWeek": "The Messenger",
+    "savedColorPalette": "sunset",
+    "savedDate": "2024,04,07",
+    "gameOfTheWeek": "Flowscape",
     "weeklyListSelection": [
         "Card Draw",
         "Want To Continue Playing",
@@ -12,41 +12,41 @@
         "Roll"
     ],
     "rollGameList": [
-        "Wildermyth",
-        "Rain World",
-        "Deep Rock Galactic",
-        "Airborne Kingdom",
-        "Neon White",
-        "The Legend of Zelda: Breath of the Wild",
-        "Oxygen Not Included",
-        "Moon Hunters",
-        "A Dance of Fire and Ice",
-        "Half Life",
-        "Frozenheim",
-        "Prehistoric Kingdom",
-        "Snake's Tale",
-        "Valheim",
-        "Dome Keeper",
-        "Pokemon Reborn",
-        "Induction",
+        "No Man's Sky",
+        "The Binding of Issac",
+        "Noita",
+        "Darkest Dungeon",
+        "Cultist Simulator",
+        "Dissembler",
+        "Dorfromantik",
+        "The Textorcist: The Story of Ray Bibbia",
+        "Touhou 13 - Ten Desires",
+        "Ultrakill",
+        "Mewnbase",
         "Satisfactory",
-        "Core Keeper",
+        "Prehistoric Kingdom",
+        "Stardew Valley",
+        "Pan'orama",
+        "Half Life: Blue Shift",
+        "Nova Drift",
+        "The Univerism",
+        "Dead Cells",
         "Free Space (Pick Any Game)"
     ],
     "cardDrawList": [
-        "Yankai's Peak",
-        "Rain World",
-        "Potion Craft",
-        "The Riftbreaker",
-        "Dissembler",
-        "Opus Magnum",
-        "Pokemon Heartgold",
+        "Lego Star Wars (Complete Saga)",
+        "Cult of the Lamb",
+        "Pan'orama",
+        "The End is Nigh",
+        "Hades",
+        "Ultrakill",
+        "Risk of Rain 2",
+        "Divinity: Original Sin 2",
+        "Achromatic",
+        "Crypt of the Necrodancer",
+        "Satisfactory",
+        "Touhou 13 - Ten Desires",
         "Chants of Sennaar",
-        "Deep Rock Galactic",
-        "Lego Star Wars (Skywalker Saga)",
-        "Pokemon White 2",
-        "Half Life: Opposing Force",
-        "Pokemon Mystery Dungeon: Explorers of Sky",
         "Free Space (Pick Any Game)"
     ],
     "personalGameList": [
@@ -63,7 +63,7 @@
         "The End is Nigh",
         "Against The Storm"
     ],
-    "numberOfPoints": 403,
+    "numberOfPoints": 405,
     "lastGameId": 151,
     "fullGameList": [
         {
