--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -1,52 +1,53 @@
 {
     "savedColorPalette": "black-space",
-    "savedDate": "2024,04,14",
-    "gameOfTheWeek": "Crypt of the Necrodancer",
+    "colorPaletteList": ["Contrast", "Sunset", "Black-Space"],
+    "savedDate": "2024,04,21",
+    "gameOfTheWeek": "Mana Spark",
     "weeklyListSelection": [
-        "Card Draw",
         "Want To Continue Playing",
         "Roll",
+        "Want To Continue Playing",
         "Card Draw",
         "Free Day",
-        "Want To Continue Playing",
+        "Card Draw",
         "Roll"
     ],
     "rollGameList": [
-        "Dead Cells",
-        "Necesse",
-        "Duskers",
-        "Shapez.io",
-        "Stacklands",
-        "Tangledeep",
-        "Mewnbase",
-        "Mindustry",
-        "Crypt of the Necrodancer",
-        "Lobotomy Corporation",
-        "Against The Storm",
-        "Rain World",
-        "Dome Keeper",
+        "Prehistoric Kingdom",
         "Satisfactory",
-        "The Univerism",
-        "Koi Farm",
-        "The Tenants",
-        "Frozenheim",
-        "Terraria",
+        "Rain World",
+        "Dorfromantik",
+        "Astroneer",
+        "Rain World",
+        "Lego Indiana Jones",
+        "Hexcells Infinite",
+        "English Country Tune",
+        "Ecosystem",
+        "Pokemon Reborn",
+        "Metroid Prime Remastered",
+        "No Man's Sky",
+        "Dome Keeper",
+        "Ethereal",
+        "Against The Storm",
+        "Grim Dawn",
+        "Pokemon Violet",
+        "Sunless Sea",
         "Free Space (Pick Any Game)"
     ],
     "cardDrawList": [
-        "Brutal Orchestra",
-        "Deep Rock Galactic",
-        "Hidden Folks",
-        "Induction",
-        "Duskers",
-        "No Man's Sky",
-        "Cosmic Express",
-        "English Country Tune",
+        "Lego Star Wars (Complete Saga)",
+        "The Planet Crafter",
+        "Prehistoric Kingdom",
         "Rain World",
-        "Firewatch",
-        "Civilization V",
-        "Cultist Simulator",
-        "Townscaper",
+        "Pokemon Violet",
+        "Inscryption",
+        "Splatoon 3",
+        "The Legend of Zelda: Breath of the Wild",
+        "Islanders",
+        "Arcaea",
+        "Neon White",
+        "Lobotomy Corporation",
+        "Duskers",
         "Free Space (Pick Any Game)"
     ],
     "personalGameList": [
@@ -63,7 +64,7 @@
         "The End is Nigh",
         "Against The Storm"
     ],
-    "numberOfPoints": 417,
+    "numberOfPoints": 419,
     "lastGameId": 153,
     "fullGameList": [
         {
