you know the drill. read the change log

--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -5,8 +5,8 @@
         "Sunset",
         "Black-Space"
     ],
-    "savedDate": "2024,04,21",
-    "gameOfTheWeek": "Mana Spark",
+    "savedDate": "2024,04,28",
+    "gameOfTheWeek": "Ecosystem",
     "weeklyListSelection": [
         "Want To Continue Playing",
         "Roll",
@@ -17,41 +17,41 @@
         "Roll"
     ],
     "rollGameList": [
-        "Prehistoric Kingdom",
-        "Satisfactory",
-        "Rain World",
-        "Dorfromantik",
-        "Astroneer",
-        "Rain World",
-        "Lego Indiana Jones",
-        "Hexcells Infinite",
-        "English Country Tune",
-        "Ecosystem",
-        "Pokemon Reborn",
-        "Metroid Prime Remastered",
-        "No Man's Sky",
+        "Monster Hunter Rise",
+        "Library of Ruina",
+        "Potion Craft",
         "Dome Keeper",
-        "Ethereal",
-        "Against The Storm",
-        "Grim Dawn",
-        "Pokemon Violet",
-        "Sunless Sea",
+        "Potion Craft",
+        "Sokobond",
+        "Crypt of the Necrodancer",
+        "Ecosystem",
+        "Wildermyth",
+        "Library of Ruina",
+        "Dorfromantik",
+        "Neon White",
+        "Iconoclasts",
+        "Stacklands",
+        "Hades",
+        "Inscryption",
+        "Neon White",
+        "Darkest Dungeon",
+        "Lego Bricktales",
         "Free Space (Pick Any Game)"
     ],
     "cardDrawList": [
-        "Lego Star Wars (Complete Saga)",
-        "The Planet Crafter",
-        "Prehistoric Kingdom",
-        "Rain World",
-        "Pokemon Violet",
-        "Inscryption",
-        "Splatoon 3",
-        "The Legend of Zelda: Breath of the Wild",
-        "Islanders",
-        "Arcaea",
-        "Neon White",
-        "Lobotomy Corporation",
-        "Duskers",
+        "Don't Starve Together",
+        "Half Life: Blue Shift",
+        "Monster Hunter Rise",
+        "Pokemon White 2",
+        "Ethereal",
+        "Lego Bricktales",
+        "Aquarium Designer",
+        "Hexcells Infinite",
+        "Kasi",
+        "Potion Craft",
+        "Noita",
+        "Carrion",
+        "Astroneer",
         "Free Space (Pick Any Game)"
     ],
     "personalGameList": [
@@ -68,7 +68,7 @@
         "The End is Nigh",
         "Against The Storm"
     ],
-    "numberOfPoints": 421,
+    "numberOfPoints": 5,
     "lastGameId": 156,
     "fullGameList": [
         {
