--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -55,12 +55,12 @@
         "Free Space (Pick Any Game)"
     ],
     "personalGameList": [
-        "Deep Rock Galactic",
+        "Ultrakill",
         "Pokemon Mystery Dungeon: Explorers of Sky",
         "Monster Train",
         "Valheim",
         "Dead Cells",
-        "Cultist Simulator",
+        "Neon White",
         "Rain World",
         "Black Book",
         "Pokemon Legends Arceus",
@@ -68,7 +68,7 @@
         "The End is Nigh",
         "Against The Storm"
     ],
-    "numberOfPoints": 5,
+    "numberOfPoints": 6,
     "lastGameId": 156,
     "fullGameList": [
         {
