read change log

--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -5,8 +5,8 @@
         "Sunset",
         "Black-Space"
     ],
-    "savedDate": "2024,04,28",
-    "gameOfTheWeek": "Ecosystem",
+    "savedDate": "2024,05,05",
+    "gameOfTheWeek": "Subnautica: Below Zero",
     "weeklyListSelection": [
         "Want To Continue Playing",
         "Roll",
@@ -17,41 +17,41 @@
         "Roll"
     ],
     "rollGameList": [
-        "Monster Hunter Rise",
-        "Library of Ruina",
-        "Potion Craft",
-        "Dome Keeper",
-        "Potion Craft",
-        "Sokobond",
-        "Crypt of the Necrodancer",
         "Ecosystem",
-        "Wildermyth",
-        "Library of Ruina",
-        "Dorfromantik",
-        "Neon White",
-        "Iconoclasts",
-        "Stacklands",
+        "Lobotomy Corporation",
+        "Don't Starve Together",
+        "Nova Drift",
+        "Islanders",
+        "Rain World",
+        "Oxygen Not Included",
+        "One Step From Eden",
+        "Dome Keeper",
+        "Nova Drift",
+        "Lego Star Wars (Complete Saga)",
+        "Firewatch",
+        "Ethereal",
+        "Moon Hunters",
+        "Ethereal",
+        "Against The Storm",
+        "Firewatch",
         "Hades",
-        "Inscryption",
-        "Neon White",
-        "Darkest Dungeon",
-        "Lego Bricktales",
+        "Mana Spark",
         "Free Space (Pick Any Game)"
     ],
     "cardDrawList": [
-        "Don't Starve Together",
-        "Half Life: Blue Shift",
-        "Monster Hunter Rise",
-        "Pokemon White 2",
-        "Ethereal",
-        "Lego Bricktales",
-        "Aquarium Designer",
-        "Hexcells Infinite",
-        "Kasi",
-        "Potion Craft",
-        "Noita",
-        "Carrion",
-        "Astroneer",
+        "Black Book",
+        "Hades",
+        "Back To Bed",
+        "Deep Rock Galactic",
+        "Ecosystem",
+        "Subnautica: Below Zero",
+        "The Riftbreaker",
+        "Prehistoric Kingdom",
+        "Necesse",
+        "Evil Genius 2",
+        "Koi Farm",
+        "Apico",
+        "Rip Them Off",
         "Free Space (Pick Any Game)"
     ],
     "personalGameList": [
@@ -60,7 +60,7 @@
         "Monster Train",
         "Valheim",
         "Dead Cells",
-        "Neon White",
+        "Necesse",
         "Rain World",
         "Black Book",
         "Pokemon Legends Arceus",
