read change log

--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -3,7 +3,8 @@
     "colorPaletteList": [
         "Contrast",
         "Sunset",
-        "Black-Space"
+        "Black-Space",
+        "Strange-Waters"
     ],
     "savedDate": "2024,05,05",
     "gameOfTheWeek": "Subnautica: Below Zero",
@@ -68,7 +69,7 @@
         "The End is Nigh",
         "Against The Storm"
     ],
-    "numberOfPoints": 7,
+    "numberOfPoints": 10,
     "lastGameId": 156,
     "fullGameList": [
         {
