consult change log for modification details

--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -6,8 +6,8 @@
         "Black-Space",
         "Strange-Waters"
     ],
-    "savedDate": "2024,05,05",
-    "gameOfTheWeek": "Subnautica: Below Zero",
+    "savedDate": "2024,05,12",
+    "gameOfTheWeek": "Metroid Dread",
     "weeklyListSelection": [
         "Want To Continue Playing",
         "Roll",
@@ -18,41 +18,41 @@
         "Roll"
     ],
     "rollGameList": [
-        "Ecosystem",
+        "Sokobond",
+        "Firewatch",
+        "Kasi",
+        "Dead Cells",
+        "Mindustry",
+        "Potion Craft",
+        "Induction",
+        "Besiege",
+        "Nova Drift",
         "Lobotomy Corporation",
-        "Don't Starve Together",
-        "Nova Drift",
-        "Islanders",
-        "Rain World",
-        "Oxygen Not Included",
-        "One Step From Eden",
-        "Dome Keeper",
-        "Nova Drift",
+        "Mindustry",
+        "Snake's Tale",
         "Lego Star Wars (Complete Saga)",
-        "Firewatch",
-        "Ethereal",
-        "Moon Hunters",
-        "Ethereal",
-        "Against The Storm",
-        "Firewatch",
-        "Hades",
-        "Mana Spark",
+        "Portal 2",
+        "Apico",
+        "Inscryption",
+        "Lego Bricktales",
+        "Pokemon Legends Arceus",
+        "Stacklands",
         "Free Space (Pick Any Game)"
     ],
     "cardDrawList": [
-        "Black Book",
-        "Hades",
-        "Back To Bed",
-        "Deep Rock Galactic",
-        "Ecosystem",
-        "Subnautica: Below Zero",
-        "The Riftbreaker",
         "Prehistoric Kingdom",
-        "Necesse",
-        "Evil Genius 2",
-        "Koi Farm",
-        "Apico",
-        "Rip Them Off",
+        "Pokemon Mystery Dungeon: Explorers of Sky",
+        "Subnautica",
+        "Against The Storm",
+        "Touhou 13 - Ten Desires",
+        "Hollow Knight",
+        "Rain World",
+        "Cultist Simulator",
+        "Half Life",
+        "Valheim",
+        "Black Book",
+        "Don't Starve Together",
+        "Cosmic Express",
         "Free Space (Pick Any Game)"
     ],
     "personalGameList": [
@@ -69,7 +69,7 @@
         "The End is Nigh",
         "Against The Storm"
     ],
-    "numberOfPoints": 10,
+    "numberOfPoints": 14,
     "lastGameId": 156,
     "fullGameList": [
         {
