--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -7,7 +7,7 @@
         "Strange-Waters"
     ],
     "savedDate": "2024,05,12",
-    "gameOfTheWeek": "Metroid Dread",
+    "gameOfTheWeek": 66,
     "weeklyListSelection": [
         "Want To Continue Playing",
         "Roll",
@@ -18,41 +18,41 @@
         "Roll"
     ],
     "rollGameList": [
-        "Sokobond",
-        "Firewatch",
+        "Evil Genius 2",
+        "The End is Nigh",
+        "Black Book",
+        "GNOG",
+        "Opus Magnum",
+        "Duskers",
+        "Lego Star Wars (Skywalker Saga)",
+        "Risk of Rain 2",
+        "Carrion",
+        "Ecosystem",
+        "Frostpunk",
+        "Splatoon 3",
+        "Against The Storm",
+        "Deep Rock Galactic",
         "Kasi",
-        "Dead Cells",
-        "Mindustry",
-        "Potion Craft",
-        "Induction",
-        "Besiege",
-        "Nova Drift",
-        "Lobotomy Corporation",
-        "Mindustry",
-        "Snake's Tale",
-        "Lego Star Wars (Complete Saga)",
-        "Portal 2",
-        "Apico",
-        "Inscryption",
-        "Lego Bricktales",
-        "Pokemon Legends Arceus",
-        "Stacklands",
+        "Mana Spark",
+        "Shapez.io",
+        "Ultrakill",
+        "Niche",
         "Free Space (Pick Any Game)"
     ],
     "cardDrawList": [
-        "Prehistoric Kingdom",
-        "Pokemon Mystery Dungeon: Explorers of Sky",
-        "Subnautica",
-        "Against The Storm",
-        "Touhou 13 - Ten Desires",
-        "Hollow Knight",
-        "Rain World",
-        "Cultist Simulator",
+        "The Univerism",
+        "Koi Farm",
+        "Half Life: Opposing Force",
+        "Achromatic",
+        "One Step From Eden",
         "Half Life",
-        "Valheim",
-        "Black Book",
-        "Don't Starve Together",
+        "Mindustry",
+        "Mewnbase",
+        "Sunless Sea",
         "Cosmic Express",
+        "Sokobond",
+        "Pokemon Reborn",
+        "Chants of Sennaar",
         "Free Space (Pick Any Game)"
     ],
     "personalGameList": [
