change log, but again

--- a/ApplicationInformation.json
+++ b/ApplicationInformation.json
@@ -1,5 +1,5 @@
 {
-    "savedColorPalette": "strange-waters",
+    "savedColorPalette": "black-space",
     "colorPaletteList": [
         "Contrast",
         "Sunset",
